@@ -1,3 +1,7 @@
+2005-08-06  Ales Hakl  <ales at hakl dot net>
+
+	* src/repl.c: Fixed race condition in SIGINT handling.
+
 2005-08-05  Ales Hakl  <ales at hakl dot net>
 
 	* src/stream.c, src/repl.c: Automatic indenting of interactive
